2005-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* all but lily/*: The grand 2004/2005 replace.

2005-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/*: add space after ,  

	* scm/music-functions.scm (has-request-chord): don't use
	ly:music-name anywhere. Fixes <<\\>> notation. 

	* scm/define-markup-commands.scm (box): use font-size for
	padding. Fixes boxed-rehearsal-marks.ly

	* lily/parser.yy (assignment_id): allow LYRICS_STRING as
	identifier definition too, so foo = \lyrics { ...   } bar = #1
	doesn't complain about "bar" being LYRICS_STRING.

	* lily/paper-def.cc (find_pango_font): new routine; Store
	pango_fonts in hash tab too. This is necessary for retrieving
	Pango_fonts::physical_font_tab() later on.
 
	* lily/pango-font.cc (pango_item_string_stencil): bugfix: don't
	crash if psname is null.

	* lily/lily-guile.cc (ly_hash2alist): new function

	* Documentation/user/changing-defaults.itely (Text encoding):
	rewrite. 

	* lily/pango-font.cc (physical_font_tab): new member. Store PSname
	-> font_filename mapping.

	* lily/pango-font-scheme.cc (LY_DEFINE): new file. New function
	ly_pango_font_physical_fonts

	* scm/framework-ps.scm (supplies-or-needs): extract names from
	physical Pango_fonts.

	* utf8.ly: new file.

2005-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/changing-defaults.itely (Page layout): add
	doco about systemSeparatorMarkup.

	* scm/page-layout.scm (default-page-make-stencil): add-to-page
	function.
	(default-page-make-stencil): insert system separators.

	* scm/define-markup-commands.scm (hcenter): add
	(beam): add.

2005-02-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-ps.scm (ez-ball): reinstate ez notation.

2005-02-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc: Spell backend consistently.  Sort options.

2005-01-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (Module): revert @include.
	
2005-01-31  Jan Nieuwenhuizen  <janneke@gnu.org>
