@@ -98,9 +98,9 @@ Axis_group_interface::set_axes (Grob*me, Axis a1, Axis a2)
     why so convoluted ? (fixme/documentme?) 
    */
   if (me->has_extent_callback (Grob::stencil_extent_proc, a1))
-    me->set_extent (Axis_group_interface::group_extent_callback_proc, a1);
+    me->set_extent_callback (Axis_group_interface::group_extent_callback_proc, a1);
   if (me->has_extent_callback (Grob::stencil_extent_proc, a2))
-    me->set_extent (Axis_group_interface::group_extent_callback_proc, a2);
+    me->set_extent_callback (Axis_group_interface::group_extent_callback_proc, a2);
 }
 
 Link_array<Grob> 
