@@ -1,3 +1,14 @@
+2005-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/note-column.cc (translate_rests): call flush_extent_cache()
+	of parents when translating rests. Fixes: c-chord-rest.ly 
+
+	* lily/include/dimension-cache.hh (struct Dimension_cache): add
+	dimension_callback_ member.
+
+	* lily/grob.cc (flush_extent_cache): new function. Force recompute
+	of extents.
+
 2005-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* all but lily/*: The grand 2004/2005 replace.
